vlib/v/checker/tests/recursive_struct_alias_embed_err.vv
struct PostKeys {
	PostKeysType
}

type PostKeysType = PostKeys
